test/spec_vectors/simd_boolean/fail/module_2.wat
(module (func (result i32) (v128.any_true (i32.const 0))))